# infra-console

./: Cargo.toml  Makefile.toml  README.md  rustfmt.toml
dev/makefiles/: format_makefile.toml  lint_makefile.toml  test_makefile.toml
src/: app.rs  config.rs  lib.rs  terminal.rs
src/app/: mod.rs  transport.rs
src/client/: mod.rs
src/client/elasticsearch/: mod.rs  response.rs
src/event/: input.rs  mod.rs
src/event/api/: mod.rs
src/event/api/elasticsearch/: mod.rs
src/view/: mod.rs  style.rs
src/view/component/: help.rs  mod.rs  resource_tab.rs
src/view/component/elasticsearch/: data.rs  mod.rs
