[package]
name = "infra-console"
version = "0.1.0"
edition = "2021"

[features]
default = ["elasticsearch"]

[dependencies]
ascii = "1.1.0"
crossterm = { version = "0.25.0", features = ["event-stream"] }
elasticsearch = { version = "8.5.0-alpha.1", optional = true, default-features = false, features = ["rustls-tls"] }
error-stack = "0.2.4"
futures = "0.3.25"
humansize = "2.1.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
typed-builder = "0.11.0"
url = { version = "2.3.1", features = ["serde"] }
